--- a/po/ja.po
+++ b/po/ja.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2005,2006,2008 Free Software Foundation, Inc.
 # This file is distributed under the same license as the mate-backgrounds package.
 # Takeshi AIHANA <takeshi.aihana@gmail.com>, 2005, 2008.
-# Satoru SATOH <ss@mate.gr.jp>, 2006.
+# Satoru SATOH <ss@gnome.gr.jp>, 2006.
 #
 msgid ""
 msgstr ""
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2008-08-19 00:02+0900\n"
 "PO-Revision-Date: 2008-08-18 23:59+0900\n"
 "Last-Translator: Takeshi AIHANA <takeshi.aihana@gmail.com>\n"
-"Language-Team: Japanese <mate-translation@mate.gr.jp>\n"
+"Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
