add GreenTraditional background for MATE, move Stripes wallpaper to desktop folder

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,10 @@ Abstract
     Copyright © 2008 Daniel Galleguillos <dnlgalleguillos@gmail.com>
     Copyright © 2008 Hylke Bons <hylkebons@gmail.com>
 
+Desktop
+ - GreenTraditional.jpg
+    Copyright © 2012 l0r4n0n <info@stefan-geissler.net>
+
 Nature
  - Aqua.jpg:
     Copyright © 2008 Charles Barbin <barbinch@free.fr>
