--- a/po/bn.po
+++ b/po/bn.po
@@ -1,129 +1,114 @@
-# Bengali translation of mate-backgrounds
+# SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Mahay Alam Khan <makl10n@yahoo.com>, 2005.
-# Samia Niamatullah <mailsamia2001@yahoo.com>, 2005.
-# Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2007.
-# Sadia Afroz <sadia@ankur.org.bd>, 2010.
+# 
+# Translators:
 # Israt Jahan <israt@ankur.org.bd>, 2010.
-#
+# Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2007.
+# Mahay Alam Khan <makl10n@yahoo.com>, 2005.
+# Sadia Afroz <sadia@ankur.org.bd>, 2010.
+# Samia Niamatullah <mailsamia2001@yahoo.com>, 2005.
 msgid ""
 msgstr ""
-"Project-Id-Version: bn\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=mate-"
-"backgrounds&component=general\n"
-"POT-Creation-Date: 2010-03-21 23:39+0000\n"
-"PO-Revision-Date: 2010-03-23 16:02+0600\n"
-"Last-Translator: Israt Jahan <israt@ankur.org.bd>\n"
-"Language-Team: Bengali <ankur-bd-l10n@googlegroups.com>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: bn\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-# Translated by sadia
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "প্রবাহ"
 
-# Translated by sadia
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "গিলে ফেলা"
 
-# Translated by sadia
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "সিল্ক"
 
-# Translated by sadia
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "স্প্রিং"
 
-# Translated by sadia
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "তরঙ্গ"
 
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "জলীয়"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "খড়খড়ি"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "বালিয়াড়ি"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "সতেজ ফুল"
 
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "বাগান"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "সবুজ মিডো"
 
-# Translated by sadia
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "জলীয়"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "বালিয়াড়ি"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "ঝড়"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "দুটি ডানা"
+
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "লেডি বার্ড"
 
-# Translated by sadia
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "খড়খড়ি"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "বৃষ্টির ফোঁটা"
 
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "ঝড়"
-
-# Translated by sadia
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "দুটি ডানা"
-
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "কাঠ"
-
-# Translated by sadia
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "হলুদ ফুল"
 
-#~ msgid "MATE Curves"
-#~ msgstr "গনোম ঢেউ"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "বাগান"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "নৌকা প্যাটার্ন"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "মেঘ প্যাটার্ন"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "তারা প্যাটার্ন"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "ইলিপসিস (অর্ধস্বচ্ছ)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "টেনটাক্যালস্ (অর্ধস্বচ্ছ)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "একুয়া ফুট (গুহ্নোম ব্রান্ডকৃত)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "কাঠ"
