--- a/po/ca.po
+++ b/po/ca.po
@@ -1,131 +1,112 @@
-# Catalan translation of mate-backgrounds.
-# Copyright © 2005 Free Software Foundation, Inc.
-# This file is distributed under the same license as the mate-backgrounds package.
-# Jesús Corrius <jesus@softcatala.org>, 2005.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Gil Forcada <gilforcada@guifi.net>, 2008.
-#
+# Jesús Corrius <jesus@softcatala.org>, 2005.
+# Pere Orga <gotrunks@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds 2.14\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-07-27 23:55+0200\n"
-"PO-Revision-Date: 2008-07-27 23:56+0200\n"
-"Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
-"Language-Team: Catalan <tradmate@softcatala.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Catalan (http://www.transifex.com/projects/p/MATE/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ca\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Arc"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Flux"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Glop"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Seda"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Primavera"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Ones"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Aigua"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Persiana"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Duna"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Ratlles"
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Flor fresca"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Jardí"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Prat verd"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Aigua"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Duna"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Tempesta"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Dues ales"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Marieta"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Persiana"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Gotes de pluja"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Tempesta"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Dues ales"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Fusta"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Flor groga"
 
-#~ msgid "MATE Curves"
-#~ msgstr "Corbes del MATE"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Jardí"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Patró de vaixells"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Patró de núvols"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Patró d'estrelles"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "El·lipses (translúcid)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Tentacles (translúcid)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Peu aquàtic (marca MATE)"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Illa de Fraser (marca MATE)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Vermell difuminat (marca MATE)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Colors estranys (marca MATE)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Objecte extraterrestre (mosaic translúcid)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Taques de vaca (mosaic translúcid)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Mosaic en forma de diamant (mosaic translúcid)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Rectangles (translúcid)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Fusta"
