--- a/po/cy.po
+++ b/po/cy.po
@@ -1,163 +1,110 @@
-# MATE Backgrounds in Welsh.
-# This file is distributed under the same license as MATE Backgrounds.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Dafydd Harries <daf@muse.19inch.net>, 2004.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-06-14 13:10+0100\n"
-"PO-Revision-Date: 2009-06-14 14:07+0100\n"
-"Last-Translator: Telsa Gwynne <mate@aloss.ukuu.org.uk>\n"
-"Language-Team: Welsh <mate-cy@lists.linux.org.uk>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: cy\n"
+"Plural-Forms: nplurals=4; plural=(n==1) ? 0 : (n==2) ? 1 : (n != 8 && n != 11) ? 2 : 3\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Llif"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
-# Fyddai 'chwysigod' yn well?
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Tonnau a swigog"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Sidan"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Sbring"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Tonnau"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Diferyn dŵr"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Llen werdd"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Twyn"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Blodyn ffres"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Gardd"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Gweirglodd werdd"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Diferyn dŵr"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Twyn"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Storom"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Dant y llew"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Buwch goch gota"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Llen werdd"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Diferion glaw"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Storom"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Dant y llew"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Pren"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Blodyn melyn"
 
-#~ msgid "MATE Curves"
-#~ msgstr "Cromliniau MATE"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Gardd"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Patrwm Cychod"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Patrwm Cymylau"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Patrwm Sêr"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Elipsau (Lled Dryloyw)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Tentaclau (Lled Dryloyw)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Troed Aqua (Brand MATE)"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Ynys Fraser (Brand MATE)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Coch Cymylog (Brand MATE)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Lliwiau Coch ac Oren (Brand MATE)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Eitem Estron (Teilsen Hanner-Tryloyw)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Sbotiau Buwch (Teilsen Hanner-Tryloyw)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Teil Deiamwnt (Teilsen Hanner-Tryloyw)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Petryalau (Hanner-Tryloyw)"
-
-#~ msgid "Due (Abstract)"
-#~ msgstr "Dyledus (Haniaethol)"
-
-#~ msgid "Due Alternate (Abstract)"
-#~ msgstr "Dyledus Eiledol (Haniaethol)"
-
-#~ msgid "Scie (Abstract)"
-#~ msgstr "Scie (Haniaethol)"
-
-#~ msgid "Scie Alternate (Abstract)"
-#~ msgstr "Scie Eiledol (Haniaethol)"
-
-#~ msgid "Hills (MATE Branded)"
-#~ msgstr "Bryniau (Brand MATE)"
-
-#~ msgid "Greche Pattern (Tile)"
-#~ msgstr "Patrwm Greche (Teilsen)"
-
-#~ msgid "Leather (Tile)"
-#~ msgstr "Lledr (Teilsen)"
-
-#~ msgid "Stone Wall Pattern (Tile)"
-#~ msgstr "Patrwm Wal Garreg (Teilsen)"
-
-#~ msgid "Grid (Translucent)"
-#~ msgstr "Grid (Hanner-Tryloyw)"
-
-#~ msgid "Masle (Translucent)"
-#~ msgstr "Masle (Hanner-Tryloyw)"
-
-#~ msgid "Waves (Translucent)"
-#~ msgstr "Tonnau (Hanner-Tryloyw)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Pren"
