--- a/po/da.po
+++ b/po/da.po
@@ -1,168 +1,112 @@
-# Danish translation of mate-backgrounds.
-# Copyright (C) 2004 Thomas Wood <thos@gnome.org>
-# This file is distributed under the same license as the mate-backgrounds package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Martin Willemoes Hansen <mwh@sysrq.dk>, 2004, 2005.
-# Ole Laursen <olau@hardworking.dk>, 2006.
 # M.P. Rommedahl <lhademmor@gmail.com>, 2008.
-#
+# Ole Laursen <olau@hardworking.dk>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-26 22:14+0200\n"
-"PO-Revision-Date: 2008-08-25 21:17+0100\n"
-"Last-Translator: M.P. Rommedahl <Lhademmor@gmail.com>\n"
-"Language-Team: Danish <dansk@klid.dk>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Danish (http://www.transifex.com/projects/p/MATE/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: da\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Strømme"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Gispe"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Silke"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Forår"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Bølger"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Aqua"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Persienner"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Sandbanke"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Friske blomster"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Have"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Grøn eng"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Aqua"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Sandbanke"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Storm"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "To vinger"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Mariehøne"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Persienner"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Regndråber"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Storm"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "To vinger"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Træ"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Gul blomst"
 
-#~ msgid "MATE Curves"
-#~ msgstr "Mate Kurver"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Have"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Bådemønster"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Skymønster"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Stjernemønster"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Ellipser (gennemsigtig)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Tentakler (gennemsigtig)"
-
-#~ msgid "Due (Abstract)"
-#~ msgstr "Due (abstrakt)"
-
-#~ msgid "Due Alternate (Abstract)"
-#~ msgstr "Alternativ due (abstrakt)"
-
-#~ msgid "Scie (Abstract)"
-#~ msgstr "Scie (abstrakt)"
-
-#~ msgid "Scie Alternate (Abstract)"
-#~ msgstr "Alternativ Scie (abstrakt)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Vand-fod (MATE-mærket)"
-
-#~ msgid "Black (MATE Branded)"
-#~ msgstr "Sort (MATE-mærket)"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Fraser-øen (MATE-mærket)"
-
-#~ msgid "Hills (MATE Branded)"
-#~ msgstr "Bakker (MATE-mærket)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Rødsløret (MATE-mærket)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Underlige farver (MATE-mærket)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Rumgenstand (gennemsigtig tern)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Koplettet (gennemsigtig tern)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Diamanttern-mønster (gennemsigtig tern)"
-
-#~ msgid "Greche Pattern (Tile)"
-#~ msgstr "Greche-mønster (tern)"
-
-#~ msgid "Leather (Tile)"
-#~ msgstr "Læder (tern)"
-
-#~ msgid "Stone Wall Pattern (Tile)"
-#~ msgstr "Stenvægs-mønster (tern)"
-
-#~ msgid "Grid (Translucent)"
-#~ msgstr "Gitter (gennemsigtig)"
-
-#~ msgid "Masle (Translucent)"
-#~ msgstr "Masle (gennemsigtig)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Rektangler (gennemsigtig)"
-
-#~ msgid "Waves (Translucent)"
-#~ msgstr "Bølger (gennemsigtig)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Træ"
