--- a/po/de.po
+++ b/po/de.po
@@ -1,122 +1,113 @@
-# German translation of mate-backgrounds.
-# Copyright (C) 2004 THE mate-backgrounds'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the mate-backgrounds
-# package.
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
+# Christian Kirbach <Christian.Kirbach@googlemail.com>, 2008.
 # Hendrik Brandt <heb@mate-de.org>, 2004.
 # Hendrik Richter <hendi@mate-de.org>, 2006.
-# Christian Kirbach <Christian.Kirbach@googlemail.com>, 2008.
-#
+#   <lebendig2002@yahoo.de>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds HEAD\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-16 17:38+0200\n"
-"PO-Revision-Date: 2008-08-16 18:30+0100\n"
-"Last-Translator: Christian Kirbach <Christian.Kirbach@googlemail.com>\n"
-"Language-Team: German <mate-de@gnome.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: German (http://www.transifex.com/projects/p/MATE/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Bogen"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Blasen"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Schleier"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Orange Wellen"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Frühjahr"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Blaue Wellen"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Wasserkranz"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Grüner Fächer"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Dünenland"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Streifen"
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Spätsommer"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Hochsommer"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Grüner Mikrokosmos"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Wasserkranz"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Dünenland"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Sturmfront"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Nachzügler"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Marienkäfer"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Grüner Fächer"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Regenzeit"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Sturmfront"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Nachzügler"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Holzfasern"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Frühling"
 
-#~ msgid "MATE Curves"
-#~ msgstr "MATE-Kurven"
-#~ msgid "Boats Pattern"
-#~ msgstr "Muster: Boote"
-#~ msgid "Clouds Pattern"
-#~ msgstr "Muster: Wolken"
-#~ msgid "Stars Pattern"
-#~ msgstr "Muster: Sterne"
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Ellipsen (Durchscheinend)"
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Tentakeln (Durchscheinend)"
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Aqua Foot (MATE-Markenzeichen)"
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Fraser-Island (MATE-Markenzeichen)"
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Fließendes Rot (MATE-Markenzeichen)"
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Seltsame Farben (MATE-Markenzeichen)"
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Alien-Artefakt (Durchscheinende Kachel)"
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Kuhflecken (Durchscheinende Kachel)"
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Diamanden (Durchscheinende Kachel)"
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Rechtecke (Durchscheinend)"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Hochsommer"
 
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Holzfasern"
