--- a/po/eu.po
+++ b/po/eu.po
@@ -1,91 +1,111 @@
-# translation of eu.po to Basque
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
-#
+# 
+# Translators:
+# Asier Iturralde Sarasola <asier.iturralde@gmail.com>, 2012.
 # Iñaki Larrañaga Murgoitio  <dooteo@euskalgnu.org>, 2005, 2006, 2008, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: eu\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-22 17:16+0200\n"
-"PO-Revision-Date: 2010-03-23 12:12+0100\n"
-"Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
-"Language-Team: Basque <itzulpena@euskalgnu.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Basque (http://www.transifex.com/projects/p/MATE/language/eu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
+"Language: eu\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Arkua"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Fluxua"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Zurrut"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Zeta"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Udaberria"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Uhinak"
 
-#: ../nature/mate-nature.xml.in.in.h:1
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
+
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
+
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Marrak"
+
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
+#. You might want to translate it into the equivalent words of your language
+#: ../nature/mate-nature.xml.in.in.h:3
+msgid "Fresh Flower"
+msgstr "Lore freskoa"
+
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
+#. You might want to translate it into the equivalent words of your language
+#: ../nature/mate-nature.xml.in.in.h:6
+msgid "Green Meadow"
+msgstr "Belardi berdea"
+
+#: ../nature/mate-nature.xml.in.in.h:7
 msgid "Aqua"
 msgstr "Ura"
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Hosto-pertsianak"
-
-#: ../nature/mate-nature.xml.in.in.h:3
+#: ../nature/mate-nature.xml.in.in.h:8
 msgid "Dune"
 msgstr "Duna"
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
-#. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
-msgid "Fresh Flower"
-msgstr "Lora freskoa"
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Ekaitza"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Lorategia"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
-#. You might want to translate it into the equivalent words of your language
 #: ../nature/mate-nature.xml.in.in.h:10
-msgid "Green Meadow"
-msgstr "Belardi berdea"
+msgid "Two Wings"
+msgstr "Bi hego"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Mari-gorringo"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Hosto-pertsianak"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Euri tantak"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Ekaitza"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Bi hego"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Egurra"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Lore horia"
 
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Lorategia"
+
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Egurra"
