--- a/po/hy.po
+++ b/po/hy.po
@@ -1,111 +1,110 @@
-# translation of mate-backgrounds.HEAD.po to armenian
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2005.
-# Narine Martirosyan <training@instigate.am>
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds.HEAD\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=mate-backgrounds&component=general\n"
-"POT-Creation-Date: 2009-04-17 13:09+0000\n"
-"PO-Revision-Date: 2010-03-10 11:07+0400\n"
-"Last-Translator: Narine Martirosyan <training@instigate.am>\n"
-"Language-Team:  <norayr@arnet.am>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"Language: hy\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Հոսք"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Ումպ"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Մետաքս"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Գարուն"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Ալիքներ"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Ջուր"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Վարագույր"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Ավազաթումբ"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Թարմ ծաղիկ"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Այգի"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Կանաչ մարգագետին"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Ջուր"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Ավազաթումբ"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Փոթորիկ"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Երկու թև"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Զատիկ"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Վարագույր"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Անձրևի կաթիլներ"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Փոթորիկ"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Երկու թև"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Անտառ"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Դեղին ծաղիկ"
 
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Ջրի հատակ (Գնոմ ապրանքանիշ)"
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Ֆրեյզեր կղզի (Գնոմ ապրանքանիշ)"
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Մշուշապատ կարմիր (Գնոմ ապրանքանիշ)"
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Խորհրդավոր գույներ (Գնոմ ապրանքանիշ)"
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Տարաշխարհիկ պատկեր (կիսաթափանց խճանկար)"
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Պտավոր կով (կիսաթափանց խճանկար)"
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Ադամանդե խճանկար (կիսաթափանց խճանկար)"
-#~ msgid "Ellipsis (Translucent)"
-#~ msgstr "Օվալաձև պատկերներ (կիսաթափանց)"
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Եռանկյուններ (կիսաթափանց)"
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Շոշափուկներ (կիսաթափանց)"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Այգի"
 
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Անտառ"
