--- a/po/lt.po
+++ b/po/lt.po
@@ -1,167 +1,109 @@
-# Lithuanian translation of mate-backgrounds.
-# Copyright (C) 2004-2006 Free Software Foundation, Inc.
-# This file is distributed under the same license as the mate-backgrounds package.
-# Žygimantas Beručka <zygis@gnome.org>, 2004-2006.
-#
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds HEAD\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-13 01:09+0300\n"
-"PO-Revision-Date: 2008-09-13 01:09+0300\n"
-"Last-Translator: Žygimantas Beručka <zygis@gnome.org>\n"
-"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Lithuanian (http://www.transifex.com/projects/p/MATE/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: lt\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Srautas"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Gurkšnis"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Šilkas"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Pavasaris"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Bangos"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Vanduo"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Žaliuzės"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Kopa"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Gyva gėlė"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Sodas"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Žalia pieva"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Vanduo"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Kopa"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Audra"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Du sparnai"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Boružė"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Žaliuzės"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Lietaus lašai"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Audra"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Du sparnai"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Medis"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Geltona gėlė"
 
-#~ msgid "MATE Curves"
-#~ msgstr "MATE kreivės"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Sodas"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Laivelių raštas"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Debesų raštas"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Žvaigždžių raštas"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Elipsės (peršviečiamas)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Čiuptuvėliai (peršviečiamas)"
-
-#~ msgid "Due (Abstract)"
-#~ msgstr "Due (abstraktus)"
-
-#~ msgid "Due Alternate (Abstract)"
-#~ msgstr "Due alternatyvus (abstraktus)"
-
-#~ msgid "Scie (Abstract)"
-#~ msgstr "Scie (abstraktus)"
-
-#~ msgid "Scie Alternate (Abstract)"
-#~ msgstr "Scie alternatyvus (abstraktus)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Aqua pėda (su MATE ženklu)"
-
-#~ msgid "Black (MATE Branded)"
-#~ msgstr "Juodas (su MATE ženklu)"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Frazerio sala (su MATE ženklu)"
-
-#~ msgid "Hills (MATE Branded)"
-#~ msgstr "Kalvos (su MATE ženklu)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Ištepta raudona (su MATE ženklu)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Keistos spalvos (su MATE ženklu)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Ateivių artefaktas (peršviečiamos plytelės)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Karvių dėmės (peršviečiamos plytelės)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Deimantinių plytelių raštas (peršviečiamos plytelės)"
-
-#~ msgid "Greche Pattern (Tile)"
-#~ msgstr "Greche raštas (išklotas)"
-
-#~ msgid "Leather (Tile)"
-#~ msgstr "Oda (išklotas)"
-
-#~ msgid "Stone Wall Pattern (Tile)"
-#~ msgstr "Akmeninės sienos raštas (išklotas)"
-
-#~ msgid "Grid (Translucent)"
-#~ msgstr "Grotelės (peršviečiamas)"
-
-#~ msgid "Masle (Translucent)"
-#~ msgstr "Masle (peršviečiamas)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Stačiakampiai (peršviečiamas)"
-
-#~ msgid "Waves (Translucent)"
-#~ msgstr "Bangos (peršviečiamas)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Medis"
