--- a/po/nl.po
+++ b/po/nl.po
@@ -1,177 +1,113 @@
-# Dutch translation of mate-backgrounds.
-# Copyright (C) 2004 The Free Software Foundation Inc.
-# This file is distributed under the same license as the mate-backgrounds package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
+# Michael Steenbeek <m.o.steenbeek@gmail.com>, 2012.
+# Reinout van Schouwen <reinouts@gnome.org>, 2008.
 # Tino Meinen <a.t.meinen@chello.nl>, 2004.
 # Wouter Bolsterlee <wbolster@gnome.org>, 2008.
-# Reinout van Schouwen <reinouts@gnome.org>, 2008
-#
-# Het is vaak onzinnig om de titels letterlijk te vertalen (welke betekenis is 
-# ook vaak onduidelijk). Het beste is om dat geval het plaatje te bekijken en zelf een
-# naam te verzinnen.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: MATE 2.10\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-07 16:43+0200\n"
-"PO-Revision-Date: 2008-09-07 16:56+0200\n"
-"Last-Translator: Reinout van Schouwen <reinouts@gnome.org>\n"
-"Language-Team: Dutch <vertaling@vrijschrift.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Dutch (http://www.transifex.com/projects/p/MATE/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: nl\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Boog"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Stroming"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Blub"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Zijde"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Spiraal"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Golven"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Water"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Jaloezieën"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Duinen"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Strepen"
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Oranje bloem"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Rode bloem"
-
-# dit is geen kiezelstrand maar een foto van grassprietjes
-# groen gras (naar analogie van gele/oranje bloem) of:
-# grasveld/groen grasveld
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Groen gras"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Water"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Duinen"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Storm"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Dubbele vleugels"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Lieveheersbeestje"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Jaloezieën"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Regendruppels"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Storm"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Dubbele vleugels"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Hout"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Gele bloem"
 
-#~ msgid "MATE Curves"
-#~ msgstr "MATE curven"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Rode bloem"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Scheepjespatroon"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Wolkenpatroon"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Sterrenpatroon"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Ellipsen (doorzichtig)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Tentakels (doorzichtig)"
-
-#~ msgid "Due (Abstract)"
-#~ msgstr "Puls (abstract)"
-
-#~ msgid "Due Alternate (Abstract)"
-#~ msgstr "Puls Alternatief (abstract)"
-
-#~ msgid "Scie (Abstract)"
-#~ msgstr "Spoor (abstract)"
-
-#~ msgid "Scie Alternate (Abstract)"
-#~ msgstr "Spoor Alternatief (abstract)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Aqua voet (MATE logo)"
-
-#~ msgid "Black (MATE Branded)"
-#~ msgstr "Zwart goud (MATE logo)"
-
-# in Australie
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Fraser eiland (MATE logo)"
-
-#~ msgid "Hills (MATE Branded)"
-#~ msgstr "Heuvels (MATE logo)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Rood zweem (MATE logo)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Lichtval (MATE logo)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Buitenaards motief (doorzichtige tegel)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Koeienvlekken (doorzichtige tegel)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Diamantpatroon (doorzichtige tegel)"
-
-#~ msgid "Greche Pattern (Tile)"
-#~ msgstr "Grieks patroon (tegel)"
-
-# leder
-#~ msgid "Leather (Tile)"
-#~ msgstr "Leer (tegel)"
-
-#~ msgid "Stone Wall Pattern (Tile)"
-#~ msgstr "Stenen muur (tegel)"
-
-#~ msgid "Grid (Translucent)"
-#~ msgstr "Raster (doorzichtig)"
-
-#~ msgid "Masle (Translucent)"
-#~ msgstr "Buiging (doorzichtig)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Rechthoeken (doorzichtig)"
-
-#~ msgid "Waves (Translucent)"
-#~ msgstr "Golven (doorzichtig)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Hout"
