--- a/po/oc.po
+++ b/po/oc.po
@@ -1,106 +1,113 @@
-# Translation of oc.po to Occitan
-# Occitan translation of mate-backgrounds.
-# Copyright (C) 1998-2006, 2007 Free Software Foundation, Inc.
-# This file is distributed under the GNU General Public License Version 2.
-#
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Benoît Dejean <TazForEver@dlfp.org>, 2005.
-# Thierry Moisan <thierryn@videotron.ca>, 2005.
 # Stéphane Raimbault <stephane.raimbault@free.fr>, 2006.
+# Thierry Moisan <thierryn@videotron.ca>, 2005.
 # Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2007, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: oc\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-14 15:29+0200\n"
-"PO-Revision-Date: 2010-04-14 15:31+0200\n"
-"Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
-"Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: oc\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
-msgid "Flow"
-msgstr "Flòt"
-
+#. From http://code.google.com/p/gnome-colors/
 #: ../abstract/mate-abstract.xml.in.in.h:2
-msgid "Gulp"
+msgid "Arc"
 msgstr ""
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
+msgid "Flow"
+msgstr "Flòt"
+
+#: ../abstract/mate-abstract.xml.in.in.h:4
+msgid "Gulp"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Seda"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Prima"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Ondas"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Agua"
-
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
 msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Duna"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
+
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Òrt"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Prat vèrd"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Agua"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Duna"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Tempèsta"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "Doas alas"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Galineta"
 
 #: ../nature/mate-nature.xml.in.in.h:12
-msgid "Rain Drops"
+msgid "Blinds"
 msgstr ""
 
 #: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Tempèsta"
+msgid "Rain Drops"
+msgstr ""
 
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Doas alas"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Fusta"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Flor jauna"
 
-#~ msgid "MATE Curves"
-#~ msgstr "Corbas MATE"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Òrt"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Motiu de batèus"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Motiu de nívols"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Motiu d'estèlas"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Fusta"
