--- a/po/pa.po
+++ b/po/pa.po
@@ -1,110 +1,110 @@
-# translation of mate-backgrounds.HEAD.po to Punjabi
-# translation of pa.po to Punjabi
-# translation of mate-backgrounds.po to Punjabi
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
-#
-# Amanpreet Singh Alam <aalam@users.sf.net>, 2004, 2005,2006, 2009.
+# 
+# Translators:
+# Amanpreet Singh Alam <aalam@users.sf.net>, 2004, 2005, 2006, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds.HEAD\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-07 12:41+0100\n"
-"PO-Revision-Date: 2009-02-04 07:00+0530\n"
-"Last-Translator: Amanpreet Singh Alam <aalam@users.sf.net>\n"
-"Language-Team: Punjabi/Panjabi <punjab-l10n@list.sf.net>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 0.3\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pa\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "ਵਹਾ"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "ਡੀਕ"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "ਰੇਸ਼ਮ"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "ਪਤਝੜ"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "ਲਹਿਰਾਂ"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "ਪਾਣੀ"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "ਪਰਦਾ"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "ਰੇਤ ਦਾ ਟਿੱਬਾ"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "ਤਾਜ਼ਾ ਫੁੱਲ"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "ਬਾਗ"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "ਹਰਾ ਤੱਟ"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "ਪਾਣੀ"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "ਰੇਤ ਦਾ ਟਿੱਬਾ"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "ਤੂਫਾਨ"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "ਦੋ ਖੰਭ"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "ਭੂੰਡੀ"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "ਪਰਦਾ"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "ਪਾਣੀ ਦੀ ਬੂੰਦ"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "ਤੂਫਾਨ"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "ਦੋ ਖੰਭ"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "ਲੱਕੜ"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "ਪੀਲਾ ਫੁੱਲ"
 
-#~ msgid "MATE Curves"
-#~ msgstr "ਗਨੋਮ ਚਾਪਾਂ"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "ਬਾਗ"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "ਕਿਸ਼ਤੀਆਂ"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "ਬੱਦਲ"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "ਤਾਰੇ"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "ਅੰਡਾਕਾਰ (ਕਲਪਨਿਕ)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "ਰੇਸ਼ੇਦਾਰ (ਕਲਪਨਿਕ)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "ਲੱਕੜ"
