--- a/po/pt.po
+++ b/po/pt.po
@@ -1,166 +1,111 @@
-# mate-backgrounds's Portuguese translation.
-# Copyright © 2004, 2006, 2008 mate-backgrounds
-# This file is distributed under the same license as the mate-backgrounds package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Duarte Loreto <happyguy_pt@hotmail.com>, 2004, 2006, 2008.
-#
+# Sérgio Marques <smarquespt@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.24\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-12 12:48+0100\n"
-"PO-Revision-Date: 2008-08-12 12:55+0000\n"
-"Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
-"Language-Team: Portuguese <mate_pt@yahoogroups.com>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Portuguese (http://www.transifex.com/projects/p/MATE/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Arco"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Fluxo"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Bolha"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "Seda"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Primavera"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Ondas"
 
-#: ../nature/mate-nature.xml.in.in.h:1
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
+
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
+
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Riscas"
+
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
+#. You might want to translate it into the equivalent words of your language
+#: ../nature/mate-nature.xml.in.in.h:3
+msgid "Fresh Flower"
+msgstr "Flor"
+
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
+#. You might want to translate it into the equivalent words of your language
+#: ../nature/mate-nature.xml.in.in.h:6
+msgid "Green Meadow"
+msgstr "Planície"
+
+#: ../nature/mate-nature.xml.in.in.h:7
 msgid "Aqua"
 msgstr "Água"
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Persianas"
-
-#: ../nature/mate-nature.xml.in.in.h:3
+#: ../nature/mate-nature.xml.in.in.h:8
 msgid "Dune"
 msgstr "Duna"
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
-#. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
-msgid "Fresh Flower"
-msgstr "Flor Alaranjada"
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Tempestade"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Jardim"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
-#. You might want to translate it into the equivalent words of your language
 #: ../nature/mate-nature.xml.in.in.h:10
-msgid "Green Meadow"
-msgstr "Planície Verde"
+msgid "Two Wings"
+msgstr "Duas asas"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Joaninha"
 
 #: ../nature/mate-nature.xml.in.in.h:12
-msgid "Rain Drops"
-msgstr "Gotas de Chuva"
+msgid "Blinds"
+msgstr "Persianas"
 
 #: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Tempestade"
+msgid "Rain Drops"
+msgstr "Gotas de chuva"
 
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "Duas Asas"
+msgid "Yellow Flower"
+msgstr "Flor amarela"
 
 #: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Madeira"
+msgid "Garden"
+msgstr "Jardim"
 
 #: ../nature/mate-nature.xml.in.in.h:16
-msgid "Yellow Flower"
-msgstr "Flor Amarelada"
-
-#~ msgid "MATE Curves"
-#~ msgstr "Curvas MATE"
-
-#~ msgid "Boats Pattern"
-#~ msgstr "Padrão de Barcos"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Padrão de Nuvens"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Padrão de Estrelas"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Elípses (Translúcido)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Tentáculos (Translúcido)"
-
-#~ msgid "Due (Abstract)"
-#~ msgstr "Duo (Abstracto)"
-
-#~ msgid "Due Alternate (Abstract)"
-#~ msgstr "Duo Alternativo (Abstracto)"
-
-#~ msgid "Scie (Abstract)"
-#~ msgstr "Ciência (Abstracto)"
-
-#~ msgid "Scie Alternate (Abstract)"
-#~ msgstr "Ciência Alternativo (Abstracto)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Pé Aqua (Marca MATE)"
-
-#~ msgid "Black (MATE Branded)"
-#~ msgstr "Preto (Marca MATE)"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Ilha Fraser (Marca MATE)"
-
-#~ msgid "Hills (MATE Branded)"
-#~ msgstr "Montes (Marca MATE)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Esborratado Vermelho (Marca MATE)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Cores Estranhas (Marca MATE)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Artefactos Alígenas (Mosaico Translúcido)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "Malhas de Vaca (Mosaico Translúcido)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Padrão de Mosaico de Diamante (Mosaico Translúcido)"
-
-#~ msgid "Greche Pattern (Tile)"
-#~ msgstr "Padrão Grego (Mosaico)"
-
-#~ msgid "Leather (Tile)"
-#~ msgstr "Cabedal (Mosaico)"
-
-#~ msgid "Stone Wall Pattern (Tile)"
-#~ msgstr "Padrão de Parede de Pedra (Mosaico)"
-
-#~ msgid "Grid (Translucent)"
-#~ msgstr "Grelha (Translúcido)"
-
-#~ msgid "Masle (Translucent)"
-#~ msgstr "Masle (Translúcido)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Rectângulos (Translúcido)"
-
-#~ msgid "Waves (Translucent)"
-#~ msgstr "Ondas (Translúcido)"
+msgid "Wood"
+msgstr "Madeira"
