--- a/po/tr.po
+++ b/po/tr.po
@@ -1,130 +1,111 @@
-# Translation of mate-backgrounds.
-# Copyright (C) 2006
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
+# Translators:
 # Baris Cicek <baris@teamforce.name.tr>, 2006, 2008.
+#   <mauron@vmail.me>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-09 10:54+0300\n"
-"PO-Revision-Date: 2008-09-07 08:08+0300\n"
-"Last-Translator: Baris Cicek <baris@teamforce.name.tr>\n"
-"Language-Team: Turkish <mate-turk@gnome.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Turkish (http://www.transifex.com/projects/p/MATE/language/tr/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type:  text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: tr\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr "Kavis"
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "Akım"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "Lokma"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "İpek"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "Bahar"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "Dalgalar"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "Su"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "Pancur"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "Kum Tepesi"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr "Şeritler"
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "Yeni Açmış Çiçek"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "Bahçe"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "Yeşil Manzara"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "Su"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "Kum Tepesi"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "Fırtına"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "İki Kanat"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "Uğur Böceği"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "Pancur"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "Yağmur Damlaları"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "Fırtına"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "İki Kanat"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "Ahşap"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "Sarı Çiçek"
 
-#~ msgid "MATE Curves"
-#~ msgstr "MATE Eğrileri"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "Bahçe"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "Botlar Dokusu"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "Bulutlar Dokusu"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "Yıldızlar Dokusu"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "Elipsler (Şeffaf)"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "Kollar (Şeffaf)"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Aqua Ayak (MATE Logosuyla)"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "Fraser Adası (MATE Logosuyla)"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "Kırmızı Bulanık (MATE Logosuyla)"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "Garip Renkler (GNOM Logosuyla)"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Uzaylı Yazıtı (Şeffaf Döşeme)"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "İnek Benekleri (Şeffaf Döşeme)"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "Elmas Döşeme Deseni (Şeffaf Döşeme)"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "Dikdörtgenler (Şeffaf)"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "Ahşap"
