--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,131 +1,110 @@
-# Chinese (Taiwan) translation of mate-background.
-# Copyright (C) 2005, 06 Free Software Foundation, Inc.
-# Woodman Tuen <wmtuen@gmail.com>, 2005-06.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>, 2008.
-#
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-background 2.27.91\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-09-21 20:58+0800\n"
-"PO-Revision-Date: 2009-09-19 21:28+0800\n"
-"Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
-"Language-Team: Chinese (Taiwan) <community@linuxhall.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-07-07 12:01+0200\n"
+"PO-Revision-Date: 2012-07-07 10:02+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: zh_TW\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
-#: ../abstract/mate-abstract.xml.in.in.h:1
+#. From http://code.google.com/p/gnome-colors/
+#: ../abstract/mate-abstract.xml.in.in.h:2
+msgid "Arc"
+msgstr ""
+
+#: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
 msgstr "流動"
 
-#: ../abstract/mate-abstract.xml.in.in.h:2
+#: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
 msgstr "茫"
 
-#: ../abstract/mate-abstract.xml.in.in.h:3
+#: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
 msgstr "絲綢"
 
-#: ../abstract/mate-abstract.xml.in.in.h:4
+#: ../abstract/mate-abstract.xml.in.in.h:6
 msgid "Spring"
 msgstr "春天"
 
-#: ../abstract/mate-abstract.xml.in.in.h:5
+#: ../abstract/mate-abstract.xml.in.in.h:7
 msgid "Waves"
 msgstr "波浪"
 
-#: ../nature/mate-nature.xml.in.in.h:1
-msgid "Aqua"
-msgstr "液體"
+#: ../desktop/mate-desktop.xml.in.in.h:1
+msgid "No Desktop Background"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:2
-msgid "Blinds"
-msgstr "窗簾"
+#: ../desktop/mate-desktop.xml.in.in.h:2
+msgid "Green Traditional"
+msgstr ""
 
-#: ../nature/mate-nature.xml.in.in.h:3
-msgid "Dune"
-msgstr "沙丘"
+#: ../desktop/mate-desktop.xml.in.in.h:3
+msgid "Stripes"
+msgstr ""
 
-#. Translators: This is the name of a desktop background image that shows an orange/red flower.
+#. Translators: This is the name of a desktop background image that shows an
+#. orange/red flower.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:6
+#: ../nature/mate-nature.xml.in.in.h:3
 msgid "Fresh Flower"
 msgstr "艷麗鮮花"
 
-#: ../nature/mate-nature.xml.in.in.h:7
-msgid "Garden"
-msgstr "花園"
-
-#. Translators: This is the name of a desktop background image that shows a green meadow.
+#. Translators: This is the name of a desktop background image that shows a
+#. green meadow.
 #. You might want to translate it into the equivalent words of your language
-#: ../nature/mate-nature.xml.in.in.h:10
+#: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
 msgstr "青草地"
+
+#: ../nature/mate-nature.xml.in.in.h:7
+msgid "Aqua"
+msgstr "液體"
+
+#: ../nature/mate-nature.xml.in.in.h:8
+msgid "Dune"
+msgstr "沙丘"
+
+#: ../nature/mate-nature.xml.in.in.h:9
+msgid "Storm"
+msgstr "暴風"
+
+#: ../nature/mate-nature.xml.in.in.h:10
+msgid "Two Wings"
+msgstr "雙翼"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
 msgstr "安然"
 
 #: ../nature/mate-nature.xml.in.in.h:12
+msgid "Blinds"
+msgstr "窗簾"
+
+#: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
 msgstr "雨滴"
 
-#: ../nature/mate-nature.xml.in.in.h:13
-msgid "Storm"
-msgstr "暴風"
-
 #: ../nature/mate-nature.xml.in.in.h:14
-msgid "Two Wings"
-msgstr "雙翼"
-
-#: ../nature/mate-nature.xml.in.in.h:15
-msgid "Wood"
-msgstr "木頭"
-
-#: ../nature/mate-nature.xml.in.in.h:16
 msgid "Yellow Flower"
 msgstr "黃花"
 
-#~ msgid "MATE Curves"
-#~ msgstr "MATE 曲線"
+#: ../nature/mate-nature.xml.in.in.h:15
+msgid "Garden"
+msgstr "花園"
 
-#~ msgid "Boats Pattern"
-#~ msgstr "船狀"
-
-#~ msgid "Clouds Pattern"
-#~ msgstr "雲狀"
-
-#~ msgid "Stars Pattern"
-#~ msgstr "星狀"
-
-#~ msgid "Ellipses (Translucent)"
-#~ msgstr "橢圓（半透明）"
-
-#~ msgid "Tentacles (Translucent)"
-#~ msgstr "觸鬚（半透明）"
-
-#~ msgid "Aqua Foot (MATE Branded)"
-#~ msgstr "Aqua Foot（MATE 標誌）"
-
-#~ msgid "Fraser Island (MATE Branded)"
-#~ msgstr "芬瑟島（MATE 標誌）"
-
-#~ msgid "Red Blurred (MATE Branded)"
-#~ msgstr "模糊紅彩（半透明）"
-
-#~ msgid "Weird Colors (MATE Branded)"
-#~ msgstr "斜紋（MATE 標誌）"
-
-#~ msgid "Alien Artifact (Translucent Tile)"
-#~ msgstr "Alien Artifact（半透明鋪排）"
-
-#~ msgid "Cow Spots (Translucent Tile)"
-#~ msgstr "牛型斑點（半透明鋪排）"
-
-#~ msgid "Diamond Tile Pattern (Translucent Tile)"
-#~ msgstr "鑽石型圖案（半透明鋪排）"
-
-#~ msgid "Rectangles (Translucent)"
-#~ msgstr "正方型（半透明）"
+#: ../nature/mate-nature.xml.in.in.h:16
+msgid "Wood"
+msgstr "木頭"
