Add new "Float into MATE" wallpaper by Rowen Stipe

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,10 @@ Desktop
  - GreenTraditional.jpg
     Copyright © 2012 l0r4n0n <info@stefan-geissler.net>
 
+ - Float-into-MATE.png
+    Copyright © 2013 François Vogelweith (Bisigi project)
+    Copyright © 2014 Joseph "Rowen Stipe" Krieger <rowen.stipe@gmail.com>
+
 Nature
  - Aqua.jpg:
     Copyright © 2008 Charles Barbin <barbinch@free.fr>
